Rename rest() macro in my_list.h to list_rest(). (Bug #12327)

include/my_list.h:
  Rename rest() macro to list_rest().
mysys/list.c:
  rest() renamed to list_rest().
mysys/thr_lock.c:
  rest() renamed to list_rest().
sql/sql_test.cc:
  rest() renamed to list_rest().